[package]
name = "okx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.4"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.24.0"
thiserror = "1.0.69"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3.31"
ws-mock = "0.2.1"
reqwest = "0.12.9"
rust_decimal = "1.36.0"
